--- a/shop/package.json
+++ b/shop/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
+    "connected-react-router": "^6.9.1",
     "cra-template": "1.1.2",
+    "history": "^4.10.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
